# packages/trueforge-sdk/src/api/types/McpToolExecution.ts
@@ -1,0 +1,13 @@
+// This file was auto-generated by Fern from our API Definition.
+
+import type * as TrueForge from "../index.js";
+
+/**
+ * Execution-related properties.
+ */
+export interface McpToolExecution {
+    /** Whether the tool supports task-augmented (long-running) execution. */
+    taskSupport?: TrueForge.McpToolExecutionTaskSupport;
+    /** Accepts any additional properties */
+    [key: string]: any;
+}
