# packages/trueforge-sdk/src/serialization/types/McpToolExecutionTaskSupport.ts
@@ -1,0 +1,14 @@
+// This file was auto-generated by Fern from our API Definition.
+
+import type * as TrueForge from "../../api/index.js";
+import * as core from "../../core/index.js";
+import type * as serializers from "../index.js";
+
+export const McpToolExecutionTaskSupport: core.serialization.Schema<
+    serializers.McpToolExecutionTaskSupport.Raw,
+    TrueForge.McpToolExecutionTaskSupport
+> = core.serialization.enum_(["forbidden", "optional", "required"]);
+
+export declare namespace McpToolExecutionTaskSupport {
+    export type Raw = "forbidden" | "optional" | "required";
+}
