# packages/trueforge-sdk/src/serialization/types/McpToolJsonSchema.ts
@@ -1,0 +1,27 @@
+// This file was auto-generated by Fern from our API Definition.
+
+import type * as TrueForge from "../../api/index.js";
+import * as core from "../../core/index.js";
+import type * as serializers from "../index.js";
+
+export const McpToolJsonSchema: core.serialization.ObjectSchema<
+    serializers.McpToolJsonSchema.Raw,
+    TrueForge.McpToolJsonSchema
+> = core.serialization
+    .object({
+        schema: core.serialization.property("$schema", core.serialization.string().optional()),
+        properties: core.serialization.record(core.serialization.string(), core.serialization.unknown()).optional(),
+        required: core.serialization.list(core.serialization.string()).optional(),
+        type: core.serialization.stringLiteral("object"),
+    })
+    .passthrough();
+
+export declare namespace McpToolJsonSchema {
+    export interface Raw {
+        $schema?: string | null;
+        properties?: Record<string, unknown> | null;
+        required?: string[] | null;
+        type: "object";
+        [key: string]: any;
+    }
+}
